Added basic bootstrap styling for the campgrounds page

--- a/V1/views/new.ejs
+++ b/V1/views/new.ejs
@@ -9,5 +9,7 @@
     <button>Submit!</button>
 </form>
 
+<a href="/campgrounds">Back to campgrounds</a>
+
 <!-- Footer Partial -->
 <% include partials/footer %>
