--- a/V2/views/new.ejs
+++ b/V2/views/new.ejs
@@ -4,7 +4,10 @@
 <div class="container">
     <div class="row">
         <h1 style="text-align: center;">Create a New Campground</h1>
+        
         <div style="width: 30%; margin: 2rem auto;">
+            
+            <!-- Form to add a new campground -->
             <form action="/campgrounds" method="POST">
                 <div class="form-group">
                     <input type="text" class="form-control" name="campName" placeholder="name">
@@ -13,11 +16,17 @@
                     <input type="text" class="form-control" name="campImage" placeholder="image url">
                 </div>
                 <div class="form-group">
+                    <textarea class="form-control rounded-1" rows="5" name="campDescription" placeholder="description"></textarea>
+                </div>
+                <div class="form-group">
                     <button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
                 </div>
             </form>
+            
             <a href="/campgrounds">Back to campgrounds</a>
+            
         </div>
+        
     </div>
 </div>
 
