--- a/V2/views/show.ejs
+++ b/V2/views/show.ejs
@@ -1,9 +1,13 @@
 <% include partials/header %>
 
-<h1><%= campground.name %></h1>
-
-<img src="<%= campground.image %>">
-
-<p><%= campground.description %></p>
+<div class="container">
+    <div class="thumbnail">
+        <h1><%= campground.name %></h1>
+        
+        <img src="<%= campground.image %>">
+        
+        <p><%= campground.description %></p>
+    </div>
+</div>
 
 <% include partials/footer %>
