--- a/V3/views/show.ejs
+++ b/V3/views/show.ejs
@@ -7,6 +7,12 @@
         <img src="<%= campground.image %>">
         
         <p><%= campground.description %></p>
+        
+        <% campground.comments.forEach(function(comment){ %>
+            <p>
+                <strong><%= comment.author %></strong> - <%= comment.text %>
+            </p>
+        <% }) %>
     </div>
 </div>
 
