--- a/V10/views/campgrounds/show.ejs
+++ b/V10/views/campgrounds/show.ejs
@@ -18,7 +18,11 @@
                     <h4><a href="#"><%= campground.name %></a></h4>
                     <p><%= campground.description %></p>
                     <p><em>Submitted by: <%= campground.author.username %></em></p>
+                    
                     <a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning">Edit</a>
+                    <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
                 </div>
                 
             </div>
