--- a/V10/views/campgrounds/show.ejs
+++ b/V10/views/campgrounds/show.ejs
@@ -19,10 +19,12 @@
                     <p><%= campground.description %></p>
                     <p><em>Submitted by: <%= campground.author.username %></em></p>
                     
-                    <a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning">Edit</a>
-                    <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
+                    <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+                        <a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning">Edit</a>
+                        <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                    <% } %>
                 </div>
                 
             </div>
