--- a/V10/views/campgrounds/show.ejs
+++ b/V10/views/campgrounds/show.ejs
@@ -19,6 +19,7 @@
                     <p><%= campground.description %></p>
                     <p><em>Submitted by: <%= campground.author.username %></em></p>
                     
+                    <!-- Show edit/delete buttons only if campground-created user is logged in -->
                     <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
                         <a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning">Edit</a>
                         <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
@@ -39,6 +40,7 @@
                             <strong><%= comment.author.username %></strong>
                             <span class="pull-right">10 days ago</span>
                             <p><%= comment.text %></p>
+                            <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
                         </div>
                     </div>
                 <% }) %>
