--- a/V14/views/campgrounds/edit.ejs
+++ b/V14/views/campgrounds/edit.ejs
@@ -20,6 +20,10 @@
                     <textarea class="form-control rounded-1" rows="5" name="campground[description]"><%= campground.description %></textarea>
                 </div>
                 <div class="form-group">
+                    <label for="location">Location</label>
+                    <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>">
+                </div>
+                <div class="form-group">
                     <button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
                 </div>
             </form>
