--- a/V14/views/campgrounds/new.ejs
+++ b/V14/views/campgrounds/new.ejs
@@ -21,6 +21,10 @@
                     <textarea class="form-control rounded-1" rows="5" name="campDescription" placeholder="description"></textarea>
                 </div>
                 <div class="form-group">
+                    <label for="location">Location</label>
+                    <input class="form-control" type="text" id="location" name="location" placeholder="Yellowstone National Park">
+                </div>
+                <div class="form-group">
                     <button class="btn btn-lg btn-default btn-block btn-primary">Submit!</button>
                 </div>
             </form>
