Added admin auth capabilities

--- a/V15/public/stylesheets/main.css
+++ b/V15/public/stylesheets/main.css
@@ -1,9 +1,15 @@
+.each-campground {
+    margin-bottom: 30px;
+}
+
 .thumbnail img {
     width: 100%;
+    height: 62%;
 }
 
 .thumbnail {
     padding: 0;
+    height:100%;
 }
 
 .thumbnail .caption-full {
