--- a/V15/views/campgrounds/index.ejs
+++ b/V15/views/campgrounds/index.ejs
@@ -1,22 +1,20 @@
 <!-- Header Partial -->
 <% include ../partials/header %>
-
+    
     <!-- Shows the main jumbotron header -->
     <header class="jumbotron">
-        
         <!--<div class="container">-->
             <h1>Welcome to YelpCamp</h1>
             <p>View our hand-picked campgrounds from all over the world</p>
             <p><a href="/campgrounds/new" class="btn btn-primary btn-lg">Add a new campground listing!</a></p>
         <!--</div>-->
-        
     </header>
     
     <!-- Loops through all the campgrounds and displays them -->
     <div class="row text-center" style="display:flex; flex-wrap: wrap;">
         <% campgrounds.forEach(function(campground){ %>
         
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6 each-campground">
                 <div class="thumbnail">
                     <img src="<%= campground.image %>">
                     <div class="caption">
