--- a/V15/views/campgrounds/show.ejs
+++ b/V15/views/campgrounds/show.ejs
@@ -20,7 +20,7 @@
                     <p><em>Submitted by: <%= campground.author.username %>, <%= moment(campground.created).fromNow() %></em></p>
                     
                     <!-- Show edit/delete buttons only if campground-created user is logged in -->
-                    <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+                    <% if(currentUser && (campground.author.id.equals(currentUser._id) || currentUser.isAdmin)){ %>
                         <a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning">Edit</a>
                         <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
                             <button type="submit" class="btn btn-danger">Delete</button>
@@ -42,7 +42,7 @@
                             <div>
                                 <span><%= comment.text %></span>
                                 <!-- Show edit/delete buttons only if campground-created user is logged in -->
-                                <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                                <% if(currentUser && (comment.author.id.equals(currentUser._id) || currentUser.isAdmin)){ %>
                                     <span class="pull-right">
                                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
                                         <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
