--- a/V15/views/partials/header.ejs
+++ b/V15/views/partials/header.ejs
@@ -32,7 +32,11 @@
                         <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
                         <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
                     <% } else{ %>
-                        <li><a href="#">Signed In As <%= currentUser.username %></a></li>
+                        <% if(currentUser.isAdmin) { %>
+                            <li><a href="#">Signed In As <%= currentUser.username %> (Admin)</a></li>
+                        <% } else{ %>
+                            <li><a href="#">Signed In As <%= currentUser.username %></a></li>
+                        <% } %>
                         <li><a href="/logout">Logout</a></li>
                     <% } %>
                 </ul>
