--- a/V15/views/landing.ejs
+++ b/V15/views/landing.ejs
@@ -21,9 +21,9 @@
                 </button>
                 <a class="navbar-brand" href="/">YelpCamp</a>
             </div>
-            <div class="collapse navbar-collapse">
+            <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="<%= (typeof page !== 'undefined' && page === 'campgrounds') ? 'active' : '' %>"><a href="/campgrounds">Home</a></li>
+                    <li class="<%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a href="/campgrounds">Home</a></li>
                 </ul>
                 
                 <ul class="nav navbar-nav navbar-right">
@@ -31,7 +31,11 @@
                         <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
                         <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
                     <% } else{ %>
-                        <li><a href="#">Signed In As <%= currentUser.username %></a></li>
+                        <% if(currentUser.isAdmin) { %>
+                            <li><a href="/users/<%= currentUser._id %>">Signed In As <%= currentUser.username %> (Admin)</a></li>
+                        <% } else{ %>
+                            <li><a href="/users/<%= currentUser._id %>">Signed In As <%= currentUser.username %></a></li>
+                        <% } %>
                         <li><a href="/logout">Logout</a></li>
                     <% } %>
                 </ul>
